tests/NormalTests/paczka1/small_fuzzy/67539946.err
Error in line 3: aEd0urPEEW S727 48,3
Error in line 16: 42NDccN5f S727 38,10
